--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 
 <h1> This is my website </h1>
 
-<h2> This is intellipaat training.
+<h2> This is intellipaat training </h2>
+
+<h3> First CI/CD Pipeline project </h3>
 
 </body>
 </html>
