--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <h2> This is intellipaat training </h2>
 
-<h3> First CI/CD Pipeline project </h3>
+<h3> First CI/CD Pipeline project1 </h3>
 
 </body>
 </html>
