--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 <h1> This is my website </h1>
 
-<h3> First CI/CD Pipeline project123456789893765 </h3>
+<h3> First CI/CD Pipeline project </h3>
 
 </body>
 </html>
