my second commit, Changes made in index.html

--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 
 <h3> First CI/CD Pipeline project </h3>
 
+<h4> This is my first DevOps project session from intellipaat </h4>
+
 </body>
 </html>
