my second commit, Changes made in index.html

--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
 
 <h4> This is my first DevOps project session from intellipaat </h4>
 
+<h5> This is my first DevOps project session from intellipaat </h5>
+
 </body>
 </html>
