Modified index.html file.

--- a/index.html
+++ b/index.html
@@ -15,5 +15,7 @@
 
 <h5> Created a Developer branch, Developer branch started ! </h5>
 
+<h6> Added docker-compose.yaml file ! </h6>
+
 </body>
 </html>
