--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <body>
-<title> My WebSite </title>
 
+<title> My WebSite </title>
 <h1> This is my website </h1>
 <h3> First CI/CD Pipeline project </h3>
 <h4> This is my first DevOps project session from intellipaat </h4>
@@ -10,6 +10,7 @@
 <h5> Created a Developer branch, Developer branch started ! </h5>
 <h6> Added docker-compose.yaml file ! </h6>
 <h6> Testig this page </h6>
+<h7> Testig this pag,, modification</h7>
 
 </body>
 </html>
